--- a/02-javaweb/experiments/exp03-blog-client/package.json
+++ b/02-javaweb/experiments/exp03-blog-client/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@bytemd/vue-next": "^1.17.2",
+    "@vueuse/core": "^9.3.0",
+    "@vueuse/integrations": "^9.3.0",
     "axios": "^1.1.2",
     "element-plus": "^2.2.18",
     "jquery": "^3.6.1",
     "pinia": "^2.0.21",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
