--- a/02-javaweb/experiments/exp03-blog-client/package.json
+++ b/02-javaweb/experiments/exp03-blog-client/package.json
@@ -12,7 +12,9 @@
     "@vueuse/integrations": "^9.3.0",
     "axios": "^1.1.2",
     "element-plus": "^2.2.18",
+    "highlight.js": "^11.6.0",
     "jquery": "^3.6.1",
+    "marked": "^4.1.1",
     "pinia": "^2.0.21",
     "universal-cookie": "^4.0.4",
     "vue": "^3.2.38",
