--- a/04-experience/student-system/package.json
+++ b/04-experience/student-system/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^9.7.0",
     "axios": "^1.2.1",
     "element-plus": "^2.2.27",
+    "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
